--- a/HCD-2-E1-Layout/style.css
+++ b/HCD-2-E1-Layout/style.css
@@ -22,23 +22,23 @@ body {
 
 /* Learners will add the rest of their CSS below this line */
 
-header {
+header, footer {
     display: flex;
     justify-content: center;
 }
 
-footer {
-    display: flex;
-    justify-content: center;
-}
 
 .container {
     display: grid;
-    grid-template-columns: 3 1fr;
-    grid-template-rows: 100%;
+    grid-template-columns: 3fr 1fr;
     gap: 10px;
+    padding: 20px;
 }
 
 .main-content {
-    
+    padding: 20px;
+}
+
+.sidebar {
+    padding: 20px;
 }
