--- a/HCD-2-E2-Transforms/style.css
+++ b/HCD-2-E2-Transforms/style.css
@@ -33,21 +33,21 @@
   }
   
   /* Step 8 & 9: Interactive rule for even li elements - background color change on hover with transition */
-  .items:nth-child(even):hover {
+  li:nth-child(even):hover {
     background-color: black;
   }
   /* Apply a transition for background color change - combined with Step 8 */
-  .items:nth-child(even) {
+  li:nth-child(even):hover {
     transition-property: background-color;
     transition-timing-function: ease;
     transition-duration: 0.3s;
   }
   /* Step 10 & 11: Interactive rule for odd li elements - font size and weight change on hover */
-  .items:nth-child(odd):hover {
+  li:nth-child(odd):hover {
     font-size: 20px;
     font-weight: bold;
   }
   /* Ensure smooth transition for font size and weight - combined with Step 10 */
-  .items:nth-child(odd) {
+  li:nth-child(odd):hover {
     transition: all ease 0.3s
   }
