--- a/HCD-2-E2-Transforms/style.css
+++ b/HCD-2-E2-Transforms/style.css
@@ -37,7 +37,7 @@
     background-color: black;
   }
   /* Apply a transition for background color change - combined with Step 8 */
-  li:nth-child(even):hover {
+  li:nth-child(even) {
     transition-property: background-color;
     transition-timing-function: ease;
     transition-duration: 0.3s;
@@ -48,6 +48,6 @@
     font-weight: bold;
   }
   /* Ensure smooth transition for font size and weight - combined with Step 10 */
-  li:nth-child(odd):hover {
+  li:nth-child(odd) {
     transition: all ease 0.3s
   }
