--- a/HCD-3-E1-Media Queries/style.css
+++ b/HCD-3-E1-Media Queries/style.css
@@ -71,39 +71,15 @@
   }
   
   /* Learners will add the rest of their CSS below this line */
-  
- /* Create four equal columns that floats next to each other */
- .container {
-  display: grid;
-  grid-template-columns: 100%;
 
-}
-
-/* On screens that are 992px wide or less, go from four columns to two columns */
-@media (max-width: 992px) {
-  .container {
-  /* Add rules here */
-  grid-template-columns: 1fr 1fr;
-  grid-template-areas: "nav"
-                        "header"
-                        "text text text"
-                        "image image"
-                        "footer";
+  @media (max-width: 768px) {
+    .container {
+      grid-template-columns: 1fr;
+    }
   }
-}
 
-/* On screens that are 600px wide or less, make the columns stack on top of each other instead of next to each other */
-@media (max-width: 600px) {
-  .container {
-  /* Add rules here */
-  grid-template-columns: 100%;
-  grid-template-areas: "nav"
-                        "header"
-                        "text"
-                        "text"
-                        "text"
-                        "image"
-                        "image"
-                        "footer";
+  @media (max-width: 480px) {
+    .container {
+      grid-template-rows: repeat(8, 1fr);
+    }
   }
-}
